--- a/backend/server/templates/mail.html
+++ b/backend/server/templates/mail.html
@@ -1,10 +1,14 @@
 <html>
 
-<p>Hello {{name}},</p>
+    <p>Hello {{name}},</p>
 
-<p>We regret to inform you that you have been offloaded from flight {{flightNumber}}</p>
+    <p>We regret to inform you that you have been offloaded from flight {{flightNumber}}</p>
 
-<p>Here are the following alternative options for your flight from {{fromDest}} to {{toDest}}</p>
+    <p>Here are the following alternative options for your flight from {{fromDest}} to {{toDest}}</p>
 
-<p>Best,</p>
+    <p>Best,</p>
+    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/9/9d/Singapore_Airlines_Logo.svg/1200px-Singapore_Airlines_Logo.svg.png"
+    width="100" height="50"/>
+
 </html>
+
